@@ -3,6 +3,8 @@ Group #19
 Jason Sekhon(Captain), Eric Lin(Mate), Morris Arroyo(Mate)
 
 -----------------------
+* Completed foxtrot issue. Added tango controller and routed foxtrot to "tango/index"
+
 * Completed bravo issue. Added bravo folder and welcome controller inside it. updated menubar item bravo to "/bravo"
 
 * Completed charlie issue. Added charlie controller and updated menubar link for Charlie to "charlie/brown"
